--- a/Frontend/src/Components/LaunchPad/LaunchPad.css
+++ b/Frontend/src/Components/LaunchPad/LaunchPad.css
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 90vh;
     
   }
   .upper-section {
@@ -25,6 +25,8 @@
     padding: 1rem;
    
   }
+  
+  
   .card {
     text-align: center;
     background: linear-gradient(180deg, #cecef8, #ffffff);
@@ -33,6 +35,7 @@
     border-radius: 16px;
     max-width: 1200px;
     width: 100%;
+    margin: 0 auto;
   }
   .heading{
     color: #2f3246;
@@ -110,24 +113,31 @@
   }
   
   /* Responsive design */
-  @media (max-width: 768px) {
-    
+  @media (max-width: 850px) {
+    .upper-section{
+      width:100%;
+      height:500px;
+      margin:0;
+      padding:1rem;
+    }
     .heading  {
       font-size: 2.5rem !important;
     }
     .card{
-      padding:50px;
-      margin:50px;
+      padding:20px;
+      margin:0;
+      height: 100%;
+      /* margin:50px; */
       /* padding-left:5px;
       padding-right:8px; */
     }
      .card-para p {
-      font-size: 0.9rem;
+      font-size: 1rem;
     }
   
     .cta-button {
-      font-size: 0.9rem;
-      padding: 0.6rem 1.3rem;
+      font-size: 1rem;
+      padding: 0.8rem 1.5rem;
     }
   }
   
@@ -137,6 +147,8 @@
     justify-content: flex-start;
     gap: 15px;
     margin-bottom: 20px;
+    border-top:  1px solid  #d0cfd2;
+    padding-top:30px;
   }
   
   .dropdown-container {
