--- a/Frontend/src/Components/Card/cardframe.css
+++ b/Frontend/src/Components/Card/cardframe.css
@@ -1,20 +1,15 @@
-.body {
-  padding-top: 70px;
-}
 .investor-card {
-  font-family: Arial, sans-serif;
+  width: 80%;
   background-color: #dee2ff;
-  padding: 30px 70px 50px 70px;
-  border-radius: 30px;
-  max-width: 1100px;
+  padding: 30px 60px;
+  border-radius: 20px;
   margin: 120px auto;
   box-shadow: 0 4px 8px #adafbe;
-
 }
 
 .header-div {
   text-align: center;
-  
+  margin-top: 2rem;
 }
 .header h1 {
   font-size: 50px;
@@ -57,8 +52,7 @@
   text-align: center;
 }
 
-.pitch-button,
-.fundraising-button {
+.actions-button {
   display: inline-table;
   width: 100%;
   padding: 10px;
@@ -69,14 +63,11 @@
   font-weight: bold;
   cursor: pointer;
   text-decoration: none;
+  background-color: #808fff;
 }
 
-.pitch-button {
-  background-color: #8ea5f5;
-}
-
-.fundraising-button {
-  background-color: #8ea5f5;
+.actions-button:hover {
+  background-color: #596dff;
 }
 
 .row {
@@ -111,20 +102,19 @@
 
 .social-links a img {
   max-width: 30px;
-  height: auto; 
+  height: auto;
 }
 
 .back-button {
-  background-color: #eff3ff; 
-  border: 2px solid #313550;
-  color: #8ea5f5; 
-  font-size: 16px;
+  background-color: transparent;
+  border: 1px solid black;
+  color: black;
+  font-size: 18px;
   cursor: pointer;
-  margin: 30px 0 30px 0;
-  
-  border-radius: 10px;
+  margin: 30px 0;
+  border-radius: 25px;
   transition: background-color 0.3s, color 0.3s;
-  padding: 5px 10px 5px 10px;
+  padding: 10px 15px;
   text-decoration: none;
 }
 
@@ -133,10 +123,10 @@
   color: #fff;
 }
 
-@media (max-width: 1048px) {
+@media (max-width: 1024px) {
   .investor-card {
+    width: 85%;
     padding: 20px;
-    max-width: 85%;
   }
 
   .header h1 {
@@ -151,8 +141,7 @@
     font-size: 15px;
   }
 
-  .pitch-button,
-  .fundraising-button {
+  .actions-button {
     padding: 8px;
     font-size: 14px;
   }
@@ -160,9 +149,8 @@
 
 @media (max-width: 768px) {
   .investor-card {
-    padding: 15px;
-    border-radius: 20px;
-    width: 80%;
+    width: 90%;
+    margin-bottom: 60px;
   }
 
   .header h1 {
@@ -190,17 +178,14 @@
     font-size: 12px;
   }
 
-  .pitch-button,
-  .fundraising-button {
+  .actions-button {
     font-size: 12px;
   }
 }
 
 @media (max-width: 480px) {
-  .investor-card {
-    padding: 10px;
-    border-radius: 15px;
-    width: 80%;
+  .back-button {
+    font-size: 12px;
   }
 
   .header h1 {
@@ -213,45 +198,5 @@
 
   .description {
     font-size: 13px;
-  }
-
-  .pitch-button,
-  .fundraising-button {
-    font-size: 12px;
-    padding: 8px;
-  }
-}
-
-@media (max-width: 320px) {
-  .investor-card {
-    padding: 5px;
-    border-radius: 10px;
-    width: 80%;
-  }
-
-  .header h1 {
-    font-size: 24px;
-  }
-
-  .logo-div {
-    max-width: 30px;
-  }
-
-  .description {
-    font-size: 12px;
-  }
-
-  .pitch-button,
-  .fundraising-button {
-    font-size: 10px;
-    padding: 5px;
-  }
-
-  .social-links a img {
-    max-width: 15px;
-  }
-
-  .back-button {
-    font-size: 10px;
   }
 }
