--- a/Frontend/src/Components/Home/Home.css
+++ b/Frontend/src/Components/Home/Home.css
@@ -56,7 +56,7 @@ hr-2:focus {
 
 .Search {
   border-bottom: 1px solid;
-  width: 300px;
+  width: 260px;
   margin: 0px 0px 0px 160px;
   display: flex;
 
@@ -77,33 +77,50 @@ hr-2:focus {
 .serch-icon {
   margin: 20px 0 0 0px;
   height: 30px;
-  width: 60px;
+  width: 50px;
 }
 
 .filter-section {
   display: flex;
-  margin: 30px 165px 0px;
+  margin: 30px 210px 0px;
+  
+}
+.dropdown2{
+  background-image: url(../../assets/arrow.svg);
+  background-size: 15%;
+  background-repeat: no-repeat;
+  background-position-x: 80%;
+  background-position-y: center;
+  
+}
+
+.dropdown {
+  appearance: none;
+  width: 200px;
+  margin-left: 20px;
+  text-align: start;
+  padding-left: 20px;
+  margin-left: 20px;
+  border-radius: 50px;
+  border-color: transparent;
 
 }
 
 .filter-section select {
-  position: relative;
-  width: 200px;
-  text-wrap: wrap;
-  text-align: left;
-  background-color: #d3e3fa;
-  left: 4%;
-  font-size: 18px;
-  font-weight: 400;
-  margin-left: 20px;
-  border: 1px solid white;
-  border-radius: 50px;
-  white-space: normal;
-  padding: 20px 20px;
+  background-color: #e81010;
+  border: 1px solid rgb(24, 22, 22);
 }
 
-.filter-section select:hover {
+
+
+.dropdown:hover {
   background: #b6ceff;
+  background-image: url(../../assets/arrow.svg);
+    background-repeat: no-repeat;
+  background-position-x: 80%;
+  background-size: 15%;
+    /* background-position-x: 70%; */
+    background-position-y: center;
 }
 
 .home-card {
@@ -332,30 +349,19 @@ hr-2:focus {
   }
 
   #button-1 {
-    /* padding-left: 15px;
+    padding-left: 15px;
     padding-right: 15px;
     margin-top: 20px;
-    /* margin: 5px 5px; */
-    /* color: #000;
+    margin: 5px 5px;
+    color: #000;
     background: #d3d3fa;
     border: 1px white;
     border-radius: 10px;
-    font-size: 13px; */ 
-    /* font-weight: 400;
-    height: 35px; */
-    /* width: fit-content; */
-    /* cursor: pointer;
-    grid-column-gap: 28px;
-    grid-row-gap: 28px;
-    border-bottom: 1px solid #d3d6e966;
-    grid-template-rows: auto;
-    grid-template-columns: 2fr 2fr 2fr 1.5fr;
-    grid-auto-columns: 1fr;
-    place-content: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    display: grid; */
-    
+    font-size: 13px;
+    font-weight: 400;
+    height: 35px;
+    width: fit-content;
+    cursor: pointer;
   }
 
 
