--- a/Frontend/src/Components/Home/Home.css
+++ b/Frontend/src/Components/Home/Home.css
@@ -50,14 +50,15 @@
 
 .Search {
   border-bottom: 1px solid;
-  width: 260px;
-  margin: 0px 0px 0px 160px;
+  width: 300px;
+  margin: 0px 0px 0px 210px;
   display: flex;
+  
 }
 
 .Search input {
   border: none;
-  width: 80%;
+  width: 100%;
   font-size: 30px;
 }
 
@@ -77,7 +78,8 @@
   width: 80%;
   margin: 0 auto;
   display: flex;
-  margin: 30px 210px 0px;
+  margin: 30px 150px 0px;
+  /* background-color: #103fe8 */
   
 }
 .dropdown2{
@@ -109,8 +111,8 @@
 .filter-section select {
   position: relative;
   width: 200px;
-  /* text-wrap: wrap; */
-  /* text-align: left; */
+  text-wrap: wrap;
+  text-align: left;
   background-color: #d3e3fa;
   font-size: 18px;
   font-weight: 400;
