--- a/Frontend/src/Components/PrivacyPolicy/PrivacyPolicy.css
+++ b/Frontend/src/Components/PrivacyPolicy/PrivacyPolicy.css
@@ -5,6 +5,22 @@
   line-height: 1.5rem;
 }
 
+.privacy-policy-container h2 {
+  font-size: 2rem;
+  color: blue;
+  margin-bottom: 8px;
+}
+
+.privacy-policy-container h3 {
+  font-size: 1.5rem;
+  padding-top: 1rem;
+}
+
+.privacy-policy-container h4 {
+  font-size: 1.25rem;
+  padding: 1rem 0;
+}
+
 @media (max-width: 480px) {
   .privacy-policy-container {
     width: 90%;
