--- a/Frontend/src/Components/Spotlight/SpotlightForm.css
+++ b/Frontend/src/Components/Spotlight/SpotlightForm.css
@@ -1,16 +1,15 @@
 .spotlightform-container {
   text-align: left;
-  margin: 10% 25%;
+  margin: 4% 25%;
   max-width: 100%;
 }
 
-.spotlightform-header-logo img {
-  width: 12%;
+.spotlightform-header-logo svg {
+  width: 18%;
 }
 
 .spotlightform-header-content h1 {
   font-size: 45px;
-  margin: 16px 0;
 }
 
 .spotlightform-header-content h2 {
@@ -40,15 +39,9 @@
   margin-top: 15px;
 }
 
-@media (max-width: 1024px) {
-  .spotlightform-container {
-    margin: 10% 20%;
-  }
-}
-
 @media (max-width: 768px) {
   .spotlightform-container {
-    margin: 13% 15%;
+    margin: 8% 15%;
   }
   .spotlightform-header-content h1 {
     font-size: 35px;
@@ -61,7 +54,7 @@
 /* Additional Styles for Form Container */
 @media (max-width: 480px) {
   .spotlightform-container {
-    margin: 28% 10%;
+    margin: 0 10% 10% 10%;
   }
   .spotlightform-header-content h1 {
     font-size: 25px;
