--- a/Frontend/src/Components/NextPlay/NextPlay.css
+++ b/Frontend/src/Components/NextPlay/NextPlay.css
@@ -274,6 +274,7 @@ body {
 
   .card-nextplay {
     padding: 15px;
+    margin: 0 auto;
     /* margin-right: 3rem; */
   }
 
@@ -291,7 +292,7 @@ body {
       padding-top:0;
     }
     .grid-section {
-      padding: 0 10px; 
+      /* padding: 0 10px;  */
       display: flex; 
       flex-wrap: wrap; 
       gap: 10px;
